<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/round_close_24"
        app:title="@string/EditProfileNameFragment_your_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_profile_given_name_wrapper"
        style="@style/Widget.ConvoFlow.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/EditProfileNameFragment_first_name"
        android:minHeight="56dp"
        android:theme="@style/ThemeOverlay.ConvoFlow.EditProfileInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_profile_name_given_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="personGivenName"
            android:inputType="textCapWords|textPersonName"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_profile_family_name_wrapper"
        style="@style/Widget.ConvoFlow.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/EditProfileNameFragment_last_name_optional"
        android:minHeight="56dp"
        android:theme="@style/ThemeOverlay.ConvoFlow.EditProfileInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_given_name_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_profile_name_family_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="personFamilyName"
            android:inputType="textCapWords|textPersonName"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_name_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/EditProfileNameFragment_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>