<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fillUserDetailFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbarSize="3dp"
    android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb"
    android:scrollbarTrackVertical="@drawable/custom_scrollbar_track"
    android:scrollbars="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="6dp"
            android:paddingHorizontal="16dp"
            android:text="@string/CreateProfileActivity_set_up_your_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:layout_editor_absoluteY="32dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_description_text"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ProfileCreateFragment__profiles_are_visible_to_contacts_and_people_you_message"
            android:textColor="#99545863"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <RelativeLayout
            android:id="@+id/avatar_background"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_description_text">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/userImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:src="@drawable/user" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/photoSelect"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/app_name"
                app:icon="@drawable/ic_camera_24"
                app:iconSize="20dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/name_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Name Preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar_background" />

        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_preview">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_firstNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="13dp"
                android:hint="@string/CreateProfileActivity_first_name_required"
                app:helperText="* Required"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_FirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:autofillHints="personGivenName"
                    android:inputType="textPersonName"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_LastNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="13dp"
                android:hint="@string/CreateProfileActivity_last_name_optional"
                app:helperText="* Optional"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_LastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:autofillHints="personFamilyName"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_EmailIdLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="13dp"
                android:hint="@string/email_id"
                app:helperText="* Optional"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_EmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_birthDateLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="13dp"
                android:hint="Date Of Birth"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/calendar"
                app:endIconMode="custom"
                app:helperText="* Optional"
                app:helperTextEnabled="true"
                app:placeholderText="DD/MM/YYYY">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_birthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:inputType="date"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_AboutLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="13dp"
                android:hint="@string/about_user"
                app:helperText="* Optional"
                app:helperTextEnabled="true"
                app:placeholderText="@string/about_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_About"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:minLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/group_description_text"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/CreateProfileActivity_group_descriptions_will_be_visible_to_members_of_this_group_and_people_who_have_been_invited"
            android:textColor="#99545863"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_container"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish_fillForm"
            style="@style/Widget.Material3.Button.TonalButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/RegistrationActivity_continue"
            app:layout_constraintEnd_toEndOf="@+id/group_description_text"
            app:layout_constraintTop_toBottomOf="@+id/group_description_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
